--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body>
-    
+    Привет
     <script src="js/index.js" type="text/babel"></script>
 </body>
 </html>
